@@ -11,6 +11,8 @@ V0.15-svn (development)
   is added to ~/.emusicj/emusicj.props then the client/server business won't
   happen, which will lead to faster startup on the machines that it doesn't 
   work on.
+* Drop directory support now works. The program will monitor a specified 
+  directory and autoload any .emp files that end up in there.
 V0.15 2006-01-04
 * The display for the title and download status no longer gets ugly when the 
   title is long. Now the download status will always be displayed, and the title 
